@@ -1,3 +1,7 @@
+Mon Oct 25 01:04:28 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
+
+	* regression/tests_pass/string.s: Added.
+
 Sun Oct 24 18:16:54 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>
 
 	* tests_fail/load_constant.s: Add case of missing constant load
